# QtShaderDemos

./: CMakeLists.txt
assets/: images.qrc
camera/: CMakeLists.txt  vertex.vsh  widget.cpp  widget.h
cube/: CMakeLists.txt  shader.qrc  widget.cpp  widget.h
free-camera/: CMakeLists.txt  fragment.fsh  widget.cpp  widget.h
rectangle/: CMakeLists.txt  fragment.fsh  vertex.vsh  widget.cpp  widget.h
texture/: CMakeLists.txt  fragment.fsh  vertex.vsh  widget.cpp  widget.h
transform/: CMakeLists.txt  fragment.fsh  vertex.vsh  widget.cpp  widget.h
triangle/: CMakeLists.txt  Main.qml  fragment.frag  main.cpp  vertex.vert
